# fal-fastapi-starter

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/routes/: health.py  image.py  video.py
core/: schemas.py  utils.py
