[project]
name = "fal-fastapi-starter"
version = "0.1.0"
description = "Starter FastAPI backend for Fal's image and video generation APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.27",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
    "fal-client>=0.7.0",
]